[tool.poetry]
name = "manga109-demos"
version = "0.1.0"
description = ""
authors = ["kur <rhdnfka94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
manga109api = "^0.3.1"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
